--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 </div>
 
 <div id="slides" class="offscreen" style="display:none;">
-<div class="slide" data-transition="none"><div class="content" ref="1_before_talk/01_intro/1">
+<div class="slide" data-transition="none"><div class="content center" ref="1_before_talk/01_intro/1">
 <h1>Happy Programming</h1>
 
 <h1>&#x5FEB;&#x6A02;&#x5BEB;&#x7A0B;&#x5F0F;</h1>
@@ -80,6 +80,11 @@
 <h3>Next step after learning Rails CRUD</h3>
 
 <h3>&#x5C0F;&#x87F9; @ RubyConf</h3>
+
+<ul>
+<li><em>http://wildjcrt.github.com/happy_programming/</em></li>
+</ul>
+
 </div>
 </div><div class="slide" data-transition="none"><div class="content bullets incremental" ref="1_before_talk/01_intro/2">
 <h1>Who am I</h1>
