--- a/index.html
+++ b/index.html
@@ -80,11 +80,6 @@
 <h3>Next step after learning Rails CRUD</h3>
 
 <h3>&#x5C0F;&#x87F9; @ RubyConf</h3>
-
-<ul>
-<li><em>http://wildjcrt.github.com/happy_programming/</em></li>
-</ul>
-
 </div>
 </div><div class="slide" data-transition="none"><div class="content bullets incremental" ref="1_before_talk/01_intro/2">
 <h1>Who am I</h1>
@@ -117,6 +112,7 @@
 <li>&#x5B89;&#x88DD; Rails &#x74B0;&#x5883;</li>
 <li>Rails CRUD</li>
 <li>Rails RESTful</li>
+<li>&#x88DD;&#x6A5F;&#x5BE6;&#x52D9;</li>
 <li>=============&gt; <a href="http://rails-101.logdown.com/">Rails 101</a> from xdite</li>
 </ul>
 
@@ -254,7 +250,7 @@
 
 <h3>&#x904A;&#x6232;&#x592A;&#x591A;&#xFF0C;&#x81EA;&#x5DF1;&#x5BEB;&#x4E00;&#x500B;&#x7DB2;&#x7AD9;&#x4F86;&#x6574;&#x7406;&#x904A;&#x6232;</h3>
 
-<p>&#x9019;&#x4E9B;&#x771F;&#x7684;&#x4E0D;&#x662F;&#x6211;&#x7684;&#x904A;&#x6232;</p>
+<p>&#x6211;&#x767C;&#x8A93;&#x9019;&#x4E9B;&#x771F;&#x7684;&#x4E0D;&#x662F;&#x6211;&#x7684;&#x904A;&#x6232;</p>
 </div>
 </div><div class="slide" data-transition="none"><div class="content bullets incremental" ref="2_todo_list/01_experience/7">
 <h1>&#x5E38;&#x5E38;&#x5FD8;&#x8A18;&#x7684;&#x4E8B;&#x60C5;</h1>
@@ -319,6 +315,16 @@
 
 </div>
 </div><div class="slide" data-transition="none"><div class="content bullets incremental" ref="2_todo_list/02_todo_list_site/6">
+<h1>CRUD &#x548C; RESTful &#x5C31;&#x662F;&#x8E72;&#x99AC;&#x6B65;</h1>
+
+<ul>
+<li>&#x8E72;&#x99AC;&#x6B65;&#x5F88;&#x7121;&#x804A;</li>
+<li>&#x5E7E;&#x4E4E;&#x4EFB;&#x4F55;&#x529F;&#x80FD;&#x90FD;&#x662F;&#x5F9E; CRUD &#x548C; RESTful &#x958B;&#x59CB;</li>
+<li>&#x7DB2;&#x7AD9;&#x5F88;&#x919C;&#x6C92;&#x95DC;&#x4FC2;&#xFF0C;&#x5148;&#x6C42;&#x6703;&#x52D5;&#x518D;&#x6C42;&#x597D;&#x770B;</li>
+</ul>
+
+</div>
+</div><div class="slide" data-transition="none"><div class="content bullets incremental" ref="2_todo_list/02_todo_list_site/7">
 <h1>&#x7DB2;&#x7AD9;&#x529F;&#x80FD;</h1>
 
 <ul>
@@ -326,7 +332,7 @@
 <li>&#x5F85;&#x8FA6;&#x4E8B;&#x9805;&#x5FEB;&#x5230;&#x671F;&#x6642;&#x5BC4;&#x4FE1;&#xFF0C; Rails ActionMailer</li>
 <li>&#x8ABF;&#x6574;&#x5916;&#x89C0;&#xFF0C;rails_admin gem, css3buttons_rails_helpers gem</li>
 <li>&#x81EA;&#x52D5;&#x5316;&#x6392;&#x7A0B;&#xFF0C; whenever gem</li>
-<li>&#x628A;&#x7DB2;&#x7AD9;&#x4E1F;&#x4E0A; heroku/aws</li>
+<li>&#x628A;&#x7DB2;&#x7AD9;&#x767C;&#x4F48;&#x5230; heroku/aws</li>
 <li>&#x628A;&#x7DB2;&#x7AD9;&#x7D66;&#x670B;&#x53CB;&#x8A66;&#x7528;&#xFF0C;&#x4E26;&#x63A5;&#x6536;&#x610F;&#x898B;&#x53BB;&#x8ABF;&#x6574;&#x7DB2;&#x7AD9;&#x529F;&#x80FD;</li>
 </ul>
 
@@ -438,6 +444,8 @@
 <ul>
 <li>&#x5BEB;&#x7A0B;&#x5F0F;&#x8981;&#x5FEB;&#x6A02;&#xFF0C;&#x5DE5;&#x4F5C;&#x8981;&#x5FEB;&#x6A02;</li>
 <li>&#x6301;&#x7E8C;&#x5BEB;&#x7A0B;&#x5F0F;&#xFF0C;&#x6301;&#x7E8C; follow Rails &#x793E;&#x7FA4;</li>
+<li>&#x5E38;&#x770B; casts &#x4E26;&#x6539;&#x5584;&#x81EA;&#x5DF1;&#x7684;&#x7A0B;&#x5F0F;</li>
+<li>&#x6BCF;&#x9031;&#x4E8C;&#x6B61;&#x8FCE;&#x4F86; Rails Tuesday &#x4EA4;&#x6D41;&#x8A0E;&#x8AD6;&#xFF01;</li>
 </ul>
 
 </div>
@@ -446,6 +454,11 @@
 </div>
 </div><div class="slide" data-transition="none"><div class="content center" ref="4_conclusion_and_qa/01_conclusion/4">
 <h1>Q &amp; A</h1>
+
+<ul>
+<li><em>http://wildjcrt.github.com/happy_programming/</em></li>
+</ul>
+
 </div>
 </div><div class="slide" data-transition="none"><div class="content center" ref="4_conclusion_and_qa/01_conclusion/5">
 <h1>&#x6295;&#x5F71;&#x7247;&#x6280;&#x8853;</h1>
