--- a/index.html
+++ b/index.html
@@ -471,6 +471,59 @@
 </ul>
 
 </div>
+</div><div class="slide" data-transition="none"><div class="content bullets incremental" ref="4_conclusion_and_qa/01_conclusion/6">
+<h1>&#x5E79;&#x58DE;&#x4E8B;</h1>
+
+<ul>
+<li>&#x7528; Kindle &#x770B;&#x5C0F;&#x8AAA;</li>
+<li>Kindle &#x652F;&#x63F4;&#x6700;&#x65B9;&#x4FBF;&#x7684;&#x683C;&#x5F0F; txt</li>
+<li>&#x5BEB;&#x4E00;&#x652F; Ruby &#x57F7;&#x884C;&#x6A94;&#x53BB;&#x6293;&#x5C0F;&#x8AAA;&#x7684;&#x7DB2;&#x9801;</li>
+<li>&#x904E;&#x6FFE;&#x6389;&#x6240;&#x6709;&#x7684; html tag</li>
+<li>&#x8F49;&#x5B58;&#x6A94;&#x70BA; txt</li>
+</ul>
+
+</div>
+</div><div class="slide" data-transition="none"><div class="content bullets incremental" ref="4_conclusion_and_qa/01_conclusion/7">
+<h1>&#x81EA;&#x6211;&#x7DF4;&#x7FD2;1</h1>
+
+<ul>
+<li>&#x5C07;&#x8CA0;&#x8CAC;&#x7684;&#x5316;&#x599D;&#x53F0;&#x5C08;&#x6848;&#x5167;&#xFF0C; lib &#x6253;&#x5305;&#x6210; gem</li>
+<li>pixnet_api&#xFF0C;&#x76EE;&#x524D;&#x53EA;&#x6709;&#x5BEB;&#x75DE;&#x5BA2;&#x90A6;&#x76F8;&#x7C3F; api</li>
+</ul>
+
+</div>
+</div><div class="slide" data-transition="none"><div class="content bullets incremental" ref="4_conclusion_and_qa/01_conclusion/8">
+<h1>&#x81EA;&#x6211;&#x7DF4;&#x7FD2;2</h1>
+
+<ul>
+<li><del>Slzzp Sort</del></li>
+<li><a href="http://dis.4chan.org/read/prog/1295544154">Sleep Sort</a></li>
+<li>&#x6839;&#x64DA;&#x7406;&#x8AD6;&#x5BEB;&#x51FA; Ruby &#x7248;&#x7684; sleep sort</li>
+<li>Multi Thread</li>
+<li>bash command</li>
+</ul>
+
+</div>
+</div><div class="slide" data-transition="none"><div class="content bullets incremental" ref="4_conclusion_and_qa/01_conclusion/9">
+<h1>&#x65B0;&#x624B;&#x6280;&#x8853;&#x8B80;&#x7269;</h1>
+
+<ul>
+<li>Programatic Programmer &#x5F9E;&#x5C0F;&#x5DE5;&#x5230;&#x5C08;&#x5BB6;</li>
+<li>&#x8EDF;&#x4EF6;&#x958B;&#x767C;&#x8005;&#x8DEF;&#x7DDA;&#x5716; Craftman</li>
+<li>Passionate Programmer &#x6211;&#x7DE8;&#x7A0B;&#xFF0C;&#x6211;&#x5FEB;&#x6A02;</li>
+</ul>
+
+</div>
+</div><div class="slide" data-transition="none"><div class="content bullets incremental" ref="4_conclusion_and_qa/01_conclusion/10">
+<h1>&#x65B0;&#x624B;&#x975E;&#x6280;&#x8853;&#x8B80;&#x7269;</h1>
+
+<ul>
+<li>Rework &#x5DE5;&#x4F5C;&#x5927;&#x89E3;&#x653E;</li>
+<li>Getting Real</li>
+<li>&#x81EA;&#x6162;1</li>
+</ul>
+
+</div>
 </div></div>
 
 </body>
