--- a/index.html
+++ b/index.html
@@ -500,7 +500,7 @@
 <li><a href="http://dis.4chan.org/read/prog/1295544154">Sleep Sort</a></li>
 <li>&#x6839;&#x64DA;&#x7406;&#x8AD6;&#x5BEB;&#x51FA; Ruby &#x7248;&#x7684; sleep sort</li>
 <li>Multi Thread</li>
-<li>bash command</li>
+<li>bash command: shift</li>
 </ul>
 
 </div>
@@ -508,9 +508,9 @@
 <h1>&#x65B0;&#x624B;&#x6280;&#x8853;&#x8B80;&#x7269;</h1>
 
 <ul>
-<li>Programatic Programmer &#x5F9E;&#x5C0F;&#x5DE5;&#x5230;&#x5C08;&#x5BB6;</li>
-<li>&#x8EDF;&#x4EF6;&#x958B;&#x767C;&#x8005;&#x8DEF;&#x7DDA;&#x5716; Craftman</li>
-<li>Passionate Programmer &#x6211;&#x7DE8;&#x7A0B;&#xFF0C;&#x6211;&#x5FEB;&#x6A02;</li>
+<li>Programatic Programmer &#x7A0B;&#x5E8F;&#x54E1;&#x4FEE;&#x7149;&#x4E4B;&#x9053;&#xFF0D;&#x5F9E;&#x5C0F;&#x5DE5;&#x5230;&#x5C08;&#x5BB6;&#xFF08;&#x7C21;&#xFF09;</li>
+<li>Apprenticeship Patterns &#x5B78;&#x5F92;&#x6A21;&#x5F0F;&#xFF1A;&#x512A;&#x79C0;&#x8EDF;&#x9AD4;&#x958B;&#x767C;&#x8005;&#x7684;&#x990A;&#x6210;&#x4E4B;&#x8DEF;</li>
+<li>Passionate Programmer &#x6211;&#x7DE8;&#x7A0B;&#xFF0C;&#x6211;&#x5FEB;&#x6A02;&#xFF08;&#x7C21;&#xFF09;</li>
 </ul>
 
 </div>
