--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-	"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+  "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
@@ -11,7 +11,7 @@
 
   <script type="text/javascript" src="./js/jquery-1.4.2.min.js"></script>
   <script type="text/javascript" src="./js/jquery.cycle.all.js"></script>
-	<script type="text/javascript" src="./js/jquery-print.js"></script>
+  <script type="text/javascript" src="./js/jquery-print.js"></script>
   <script type="text/javascript" src="./js/jquery.batchImageLoad.js"></script>
 
   <script type="text/javascript" src="./js/jquery.doubletap-0.1.js"></script>
@@ -27,11 +27,11 @@
   <link type="text/css" href="./css/theme/ui.all.css" media="screen" rel="stylesheet" />
   <link type="text/css" href="./css/sh_style.css" rel="stylesheet" >
 
-  
-    <link rel="stylesheet" href="file/slide.css" type="text/css"/>
-  
 
-  
+    <link rel="stylesheet" href="file/slide.css" type="text/css"/>
+
+
+
 
   <script type="text/javascript">
   $(function(){
@@ -151,7 +151,7 @@
 </div><div class="slide" data-transition="none"><div class="content center" ref="1_before_talk/02.passion_and_git/3">
 <h1>Happy Programming</h1>
 
-<p><img src="file:///Users/jcrt/learning/happy_programming/1_before_talk/matz.png" alt="&#x5FEB;&#x6A02;&#x5B78;Ruby"/></p>
+<p><img src="file/matz.png" alt="&#x5FEB;&#x6A02;&#x5B78;Ruby"/></p>
 </div>
 </div><div class="slide" data-transition="none"><div class="content center" ref="1_before_talk/02.passion_and_git/4">
 <h1>&#x71B1;&#x611B;&#x5BEB;&#x7A0B;&#x5F0F;&#xFF0C;&#x4E0D;&#x7136;&#x5C31;&#x96E2;&#x958B;&#x5B83;&#x3002;</h1>
@@ -229,7 +229,7 @@
 
 </div>
 </div><div class="slide" data-transition="none"><div class="content center" ref="2_todo_list/01_experience/4">
-<p><img src="file:///Users/jcrt/learning/happy_programming/2_todo_list/doh.jpg" alt="doh"/></p>
+<p><img src="file/doh.jpg" alt="doh"/></p>
 
 <h2>&#x8166;&#x888B;&#x4E00;&#x7247;&#x7A7A;&#x767D;&#xFF0C;&#x6C92;&#x6709; idea &#x600E;&#x9EBC;&#x8FA6;&#x2026;</h2>
 </div>
@@ -246,7 +246,7 @@
 </div><div class="slide" data-transition="none"><div class="content center" ref="2_todo_list/01_experience/6">
 <h1>&#x8208;&#x8DA3;</h1>
 
-<p><img src="file:///Users/jcrt/learning/happy_programming/2_todo_list/Board-Games.jpg" alt="&#x684C;&#x4E0A;&#x904A;&#x6232;"/></p>
+<p><img src="file/Board-Games.jpg" alt="&#x684C;&#x4E0A;&#x904A;&#x6232;"/></p>
 
 <h3>&#x904A;&#x6232;&#x592A;&#x591A;&#xFF0C;&#x81EA;&#x5DF1;&#x5BEB;&#x4E00;&#x500B;&#x7DB2;&#x7AD9;&#x4F86;&#x6574;&#x7406;&#x904A;&#x6232;</h3>
 
